Do not crash when changing last program's default bin.

BUG: 133821

svn path=/trunk/extragear/multimedia/k3b/; revision=582612